--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -185,8 +185,8 @@
     <integer name="config_multiuserMaximumUsers">4</integer>
 
     <!-- Allow the flashlight to use wakelocks -->
-    <bool name="config_useWakeLockForFlashlight">true</bool>
+    <!-- <bool name="config_useWakeLockForFlashlight">true</bool> -->
 
     <!-- Configuration to support SIM contact batch operation -->
-    <bool name="config_sim_phonebook_batch_operation">false</bool>
+    <!-- <bool name="config_sim_phonebook_batch_operation">false</bool> -->
 </resources>
